<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014-2017 The OmniROM Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>
    <string name="category_gestures_title">Device gestures</string>
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>
    <string name="vib_test">Test</string>
    <string name="advanced_settings">Advanced</string>
    <string name="category_slider">Slider</string>
    <string name="slider_mode_title">Slider mode</string>
    <string name="buttons_title">Buttons</string>
    <string name="swap_back_recents_summary"></string>
    <string name="swap_back_recents_title">Swap back and recents button</string>
    <string name="graphics_title">Graphics</string>
    <string name="srgb_mode_summary"></string>
    <string name="srgb_mode_title">sRGB mode</string>
    <string name="dcd_mode_title">DC Dimming</string>
    <string name="dcd_mode_summary">Reduce screen flickers at low brightness</string>
    <string name="hbm_mode_summary"></string>
    <string name="hbm_mode_title">High brightness mode</string>
    <string name="proxi_summary_head">Check proximity sensor for handling gesture and fingerprint sensor</string>
    <string name="proxi_title_head">Proximity check</string>
    <string name="off_screen_gesture_feedback_summary_head">Enable haptic feedback for gestures</string>
    <string name="off_screen_gesture_feedback_title_head">Haptic feedback</string>
    <string name="slider_mode_off">Off</string>
    <string name="slider_mode_flashlight">Flashlight</string>
    <string name="slider_mode_vibrate">Vibrate</string>
    <string name="slider_mode_silent">Silent</string>
    <string name="slider_mode_priority">Priority only</string>
    <string name="slider_mode_alarm">Alarms only</string>
    <string name="slider_mode_zen">Do not disturb</string>
    <string name="slider_mode_title_top">Top position</string>
    <string name="slider_mode_title_center">Center position</string>
    <string name="slider_mode_title_bottom">Bottom position</string>
    <string name="dci_mode_summary"></string>
    <string name="dci_mode_title">Display-P3</string>
    <string name="Wide_mode_summary"></string>
    <string name="Wide_mode_title">AMOLED Wide Gamut</string>

    <string name="choose_app">Choose app</string>
    <string name="category_double_swipe_gesture">II gesture</string>
    <string name="offscreen_gesture_title">Offscreen gestures</string>
    <string name="category_circle_gesture">O gesture</string>
    <string name="category_down_arrow_gesture">V gesture</string>
    <string name="category_up_arrow_gesture">A gesture</string>
    <string name="category_left_arrow_gesture">&lt; gesture</string>
    <string name="category_right_arrow_gesture">&gt; gesture</string>
    <string name="category_gestures_summary">Configure gesture actions</string>
    <string name="torch_entry">Flashlight</string>
    <string name="disabled_entry">Disabled</string>
    <string name="camera_entry">Camera</string>
    <string name="music_play_entry">Play / pause music</string>
    <string name="music_prev_entry">Prev track</string>
    <string name="music_next_entry">Next track</string>
    <string name="volume_up">Raise volume</string>
    <string name="volume_down">Lower volume</string>
    <string name="browse_scroll_up">Scroll up</string>
    <string name="browse_scroll_down">Scroll down</string>
    <string name="navigate_back">Back</string>
    <string name="navigate_home">Home</string>
    <string name="navigate_recent">Recent</string>
    <string name="not_ready_summary">Resolving...</string>
    <string name="resolve_failed_summary">Resolving app failed</string>
    <string name="category_down_swipe_gesture">Down swipe</string>
    <string name="category_up_swipe_gesture">Up swipe</string>
    <string name="category_left_swipe_gesture">Left swipe</string>
    <string name="category_right_swipe_gesture">Right swipe</string>

    <string name="doze_category_title">Ambient display</string>
    <string name="doze_category_summary">Wake screen when you receive notifications</string>
    <string name="wave_check_summary">Pulse notifications on hand wave</string>
    <string name="wave_check_title">Hand wave</string>
    <string name="tilt_check_summary">Pulse notifications when device is picked up</string>
    <string name="tilt_check_title">Pick up</string>
    <string name="pocket_check_summary">Pulse notifications on removal from pocket</string>
    <string name="pocket_check_title">Pocket</string>
    <string name="ambient_display_enable">Ambient display must be enabled in display settings</string>

    <string name="panel_category_title">Panel modes</string>
    <string name="panel_category_summary">Modes for panel color correction</string>
    <string name="off_mode_title">Off</string>
    <string name="tile_panel_mode">Panel modes</string>
    <string name="tile_hbm_mode">High brightness modes</string>
    <string name="wake_entry">Wakeup</string>
</resources>
